src/scss/pages/bullionmarkFrontPage.scss
/* ... */
#InspiringStories {
    padding: 0 0 80px;

    @include media($md) {
        padding: 50px 0;
    }

    .InspiringStoriesTitle {
        margin-bottom: 41px;

        @include media($md) {
            margin-bottom: 20px;
        }
    }

    .InspiringStoriesContent {
        justify-content: center;
        align-items: center;
        gap: 36px;

        @include media($md) {
            flex-direction: column;
            gap: 77px;
        }

        .LeftContent,
        .RightContent {
            flex: 1;
            cursor: pointer;

            img {
                width: 100%;
            }

            .BullionmarkSectionHeading {
                text-align: left;

                .Title {
                    font-size: 30px;
                    line-height: 42px;
                    margin: 12px 0 9px;


                    @include media($md) {
                        font-size: 25px;
                        line-height: 35px;
                    }

                }
            }

            .Date {
                line-height: 26px;
                font-weight: 700;
                margin-top: 14px;
                color: $pumpkinOrange;

                @include media($md) {
                    margin-top: 10px;
                }

                @include media($ssm) {
                    margin-top: 22px;
                }
            }
        }

    }
}

#SectionNewsletter {
    overflow: hidden;

    .NewsletterBG {
        img {
            width: 100%;
            object-fit: cover;

            @include media($ssm) {
                scale: 1.5;
                padding-top: 70px;
            }

            @include media($xs) {
                scale: 2;
            }
        }
    }

    .BackgroundHolder {
        margin-top: -400px;
        padding-bottom: 105px;
        background-color: $peachSoft;

        @include media($xl) {
            margin-top: -300px;
        }

        @include media($lg) {
            padding-bottom: 60px;
        }

        @include media($md) {
            margin-top: -210px;
        }

        @include media($ssm) {
            margin-top: -80px;
        }

        @include media($xs) {
            margin-top: -30px;
        }

        .BullionmarkSectionHeading {
            .Title {
                @include media($md) {
                    font-size: 32px;
                    line-height: 43px;
                }
            }
        }
    }

    .MuiContainer-root {
        max-width: 643px;

        @include media($md) {
            position: relative;
            z-index: 1;
        }

        .BullionmarkSectionHeading {
            margin-bottom: 35px;

            @include media($md) {
                margin-bottom: 20px;
            }
        }

        form {
            .InputRow {
                &.Agreement {
                    .MuiFormControl-root {
                        .MuiFormLabel-root {
                            display: none;
                        }

                        .MuiFormGroup-root {
                            .MuiFormControlLabel-root {
                                .MuiFormControlLabel-label {
                                    @include media($sm) {
                                        font-size: 11px;
                                    }
                                }

                            }
                        }
                    }
                }

                &.ContactSelect {
                    .MuiFormControl-root {
                        .react-tel-input {
                            .form-control {
                                border-radius: 5px;
                                background-color: rgba($white, 0.3);

                                &:focus {
                                    outline-color: $pumpkinOrange;
                                }
                            }
                        }
                    }
                }

                .MuiTextField-root {
                    .MuiInputBase-root {
                        background-color: rgba($white, 0.3);

                        .MuiInputBase-input {
                            padding: 16px 18px;

                            // @include media($sm) {
                            //     padding: 10px 16px;
                            // }
                        }

                        .MuiOutlinedInput-notchedOutline {
                            border-radius: 5px;
                        }
                    }
                }
            }

            .ActionWrapper {
                justify-content: center;
                margin-top: 35px;

                .MuiButton-root {
                    @include media-min($md) {
                        min-width: 191px;
                    }
                }
            }
        }
    }
}

.BullionmarkFrontPage {
    .MuiButton-root {
        border-radius: 8px;
    }
}

